operations/eip.tf
#resource "aws_eip" "deployserver" {
#  instance = "${aws_instance.deployserver.id}"
#}

#output "deployserver_public_elastic_ip_address" {
#    value = "${aws_eip.deployserver.public_ip}"
#}
